# telegram-freelance-hunter-bot

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  ToDoList.txt  pyproject.toml
data/: blacklist.json  channels_and_groups.json  chats.json  keywords.json
docker/: .dockerignore  Dockerfile  docker-compose.yml
src/: bootstrap.py  config.py  main.py
src/bot/: __init__.py  bot.py
src/bot/handlers/: __init__.py  cleanup.py  start.py
src/database/: __init__.py  connection.py  models.py  repository.py
src/services/: __init__.py  blacklist.py  blacklist_service.py  chats.py  keyword_service.py  keywords.py  message_processor.py  network.py  network_service.py
src/telegram_client/: __init__.py  client.py
src/telegram_client/handlers/: __init__.py  new_message.py
src/utils/: __init__.py  logger.py
tests/: __init__.py  conftest.py  test_blacklist.py  test_bootstrap.py  test_bot_creation.py  test_chats.py  test_database_connection.py  test_handlers.py  test_keywords.py  test_main.py  test_message_handler.py  test_message_processor.py  test_models.py  test_network.py  test_repository.py  test_telegram_client.py
