[project]
name = "telegram-freelance-hunter-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "xXxDEIMOSxXx",email = "VolodymyrDotsiakOfficial@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "aiogram (==3.26.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "ruff (>=0.15.6,<0.16.0)",
    "pylint (>=4.0.5,<5.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "pymorphy3 (>=2.0.6,<3.0.0)",
    "inflect (>=7.5.0,<8.0.0)",
    "colorama (>=0.4.6,<0.5.0)",
    "sqlalchemy[asyncio] (>=2.0.48,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "telethon (>=1.42.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pre-commit (>=4.5.1,<5.0.0)",
    "ruff (>=0.15.6,<0.16.0)",
    "pylint (>=4.0.5,<5.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]

[tool.isort]
profile = "black"

[tool.pylint.messages_control]
disable = [
    "broad-exception-caught",
    "import-error",
    "no-else-raise",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.pylint.MASTER]
ignore-paths = [
    "^tests/.*$",
]
